[gd_scene load_steps=4 format=3 uid="uid://nb1u2034y1p1"]

[ext_resource type="FontFile" uid="uid://c4pe7v7qaoxgf" path="res://assets/fonts/Comfortaa-Bold.ttf" id="1_fu10x"]
[ext_resource type="Script" uid="uid://mgcahfixir3o" path="res://scripts2/LosingScreen.gd" id="1_xtduv"]
[ext_resource type="PackedScene" uid="uid://ne1mtcf1gjyd" path="res://scenes/scene_transition_animation.tscn" id="3_4pysh"]

[node name="LosingScreen" type="Node2D"]
script = ExtResource("1_xtduv")

[node name="BackgroundDeath" type="Sprite2D" parent="."]

[node name="Restart" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 460.0
offset_top = 750.0
offset_right = 860.0
offset_bottom = 850.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_fu10x")
theme_override_font_sizes/font_size = 40
text = "Recommencer"

[node name="ToMainMenu" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1060.0
offset_top = 750.0
offset_right = 1460.0
offset_bottom = 850.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_fu10x")
theme_override_font_sizes/font_size = 40
text = "Menu principal"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 460.0
offset_top = 250.0
offset_right = 1460.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_fu10x")
theme_override_font_sizes/normal_font_size = 100
text = "Tu es mort..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scene_transition_animation" parent="." instance=ExtResource("3_4pysh")]

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="ToMainMenu" to="." method="_on_to_main_menu_pressed"]
